exportJSON fix so that it works on Firefox also (Blob instead of encodeURI). Adjusted tests accordingly -> MUTATE APP

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -325,7 +325,8 @@ hr {
   .btn-for-merging,
   .created,
   .search-filter,
-  .global-btn-row {
+  .global-btn-row,
+  #footer :not(#copyright) {
     display: none !important;
   }
 
